# base-passwd

./: .bzrignore  .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  group.master  passwd.master  update-passwd.8  update-passwd.c  update-passwd.pl.8  version.h
debian/: changelog  config  control  copyright  doc-base  postinst  prerm  rules
doc/: Makefile  Makefile.am  users-and-groups.sgml
man/: Makefile  Makefile.am  Makefile.in  update-passwd.es.8  update-passwd.fr.8
man/po4a/: po4a.cfg
man/po4a/po/: base-passwd.pot  de.po  es.po  fr.po  ja.po  ru.po
old/: update-passwd.8  update-passwd.c
